--- a/api/web5-js/dwn/dwn.mdx
+++ b/api/web5-js/dwn/dwn.mdx
@@ -1,7 +1,11 @@
+import Divider from '@site/src/components/Divider';
+
 # dwn
 
 ## Overview
 The `dwn` class is responsible for providing convenience methods related to DWNs.
+
+<Divider type="slash"/>
 
 ## Properties
 
@@ -9,3 +13,4 @@ The `dwn` class is responsible for providing convenience methods related to DWNs
 
 ### [protocols](protocols.mdx)
 
+<br/>
