--- a/api/web5-js/index.mdx
+++ b/api/web5-js/index.mdx
@@ -83,13 +83,9 @@ Enables an app to request connection to a user's local identity app (like a desk
 
 #### Return Value
 
-`web5`
+`web5` - A class instance of `Web5` that enables access to a locally running DWN, DID interaction methods, and other capabilities related to the connected DID
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A class instance of `Web5` that enables access to a locally running DWN, DID interaction methods, and other capabilities related to the connected DID.
-
-`did`
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A class instance representing the decentralized identifier of the  DID that was created or attained connection to.
+`did` - A class instance representing the decentralized identifier that was created or attained connection to
 
 #### Code Example
 
