--- a/docs/api.mdx
+++ b/docs/api.mdx
@@ -4,27 +4,26 @@ import ApiCard from '@site/src/components/ApiCard';
 
 
 <div>
-  <p>The Web5 API References provide access to the Web5 JS SDK, DWN JS SDK, the SSI SDK, and SSI Service API.</p>
   <div className="grid grid-cols-2 gap-4 pt-6">
   <ApiCard
       url="/api/web5-js"
-      name="Web5 JavaScript SDK"
-      description="The Web5 JS SDK provides a simple library for the necessary functionality needed to build Web5 apps at scale. It abstracts away much of the heavy-lifting and aims to make building Web5 apps as close to effortless as possible."
+      name="Web5 JS SDK"
+      description="A library to build decentralized apps at scale. It abstracts away much of the heavy-lifting and aims to make building Web5 apps as close to effortless as possible."
     />
     <ApiCard
       url="/docs/apis/ssi-service"
       name="SSI Service API"
-      description="The Self Sovereign Identity Service (SSIS) facilitates all things relating to DIDs and Verifiable Credentials "
+      description="The Self Sovereign Identity Service facilitates all things relating to DIDs and Verifiable Credentials "
     />
     <ApiCard
       url="https://tbd54566975.github.io/dwn-sdk-js/"
-      name="DWN JavaScript SDK"
-      description="A decentralized personal and application data storage and message relay node, as defined in the DIF Decentralized Web Node specification. Users may have multiple Nodes that replicate their data between them."
+      name="DWN JS SDK"
+      description="A decentralized data storage and message relay node, as defined in the DIF Decentralized Web Node specification. Users may have multiple Nodes that replicate their data between them."
     />
     <ApiCard
       url="https://pkg.go.dev/github.com/TBD54566975/ssi-sdk"
-      name="SSI SDK - Go Docs"
-      description=" The ssi-sdk intends to provide flexible functionality based on a set of standards-based primitives for building decentralized identity applications in a modular manner: with limited dependencies between components."
+      name="SSI SDK"
+      description="Provides flexible functionality based on a set of standards-based primitives for building decentralized identity applications in a modular manner: with limited dependencies between components."
     />
   </div>
 </div>
