fixing API cards on mobile

--- a/docs/api.mdx
+++ b/docs/api.mdx
@@ -4,7 +4,7 @@ import ApiCard from '@site/src/components/ApiCard';
 
 
 <div>
-  <div className="grid grid-cols-2 gap-4 pt-6">
+  <div className="grid grid-cols-1 desktop:grid-cols-2 gap-4 pt-6">
   <ApiCard
       url="/api/web5-js"
       name="Web5 JS SDK"
