--- a/api/web5-js/dwn/dwn.mdx
+++ b/api/web5-js/dwn/dwn.mdx
@@ -3,7 +3,7 @@ import Divider from '@site/src/components/Divider';
 # dwn
 
 ## Overview
-The `dwn` class is responsible for providing convenience methods related to DWNs.
+The `dwn` class is responsible for providing convenience methods related to DWNs
 
 <Divider type="slash"/>
 
