--- a/api/web5-js/dwn/records.mdx
+++ b/api/web5-js/dwn/records.mdx
@@ -35,9 +35,9 @@ Every modifying method of the `records` class returns an instance of a `Record` 
 
 `send(did)`: Sends a given record to the specified DID
 
-`delete(id)`:  Generates a `delete` etnry tombstone for the record. This is a convenience method that allows you to easily delete records
+`delete(id)`:  Generates a _delete_ entry tombstone for the record. This is a convenience method that allows you to easily delete records
 
-`update()`: Takes in a new request object matching the expected method signature of a `write` and overwrites the record
+`update()`: Takes in a new request object matching the expected method signature of a _write_ and overwrites the record
 
 </details>
 
